# ga-ddp

./: CMakeLists.txt  README.md  package.xml
benchmark/: AAA_dyn_test.m  AAA_fo_test.m  AAA_kine_test.m  AAA_so_test.m  AAA_time_test.m
benchmark/CGA/: .MATLABDriveTag  AAA_CGA_test.m  CGA_2clifford.m  CGA_dual.m  CGA_element.m  CGA_inner.m  CGA_join.m  CGA_prod.m  CGA_union.m  CGA_wedge.m
benchmark/GA/: .MATLABDriveTag  GA_AdM.m  GA_DHmotor.m  GA_Rev.m  GA_adB.m  GA_exp.m  GA_fdyn.m  GA_fdyn_fo.m  GA_fdyn_so.m  GA_fkine.m  GA_forque.m  GA_idyn.m  GA_idyn_fo.m  GA_idyn_so.m  GA_ikine.m  GA_jacob_A.m  GA_jacob_G.m  GA_log.m  GA_metric.m  GA_motor.m  GA_plotM.m  GA_prodM.m  GA_prodMB.m  PGA_Frame3.m  PGA_jacob2.m
benchmark/PGA/: .MATLABDriveTag  PGA_2clifford.m  PGA_Frame2.m  PGA_Frame3.m  PGA_Lie2.m  PGA_Lie3.m  PGA_element.m  PGA_inner.m  PGA_jacob2.m  PGA_jacob3.m  PGA_prod.m  PGA_wedge.m
benchmark/POE/: .MATLABDriveTag  POE_DHmotor.m  POE_fdyn.m  POE_fdyn_fo.m  POE_fdyn_so.m  POE_idyn.m  POE_idyn_fo.m  POE_idyn_so.m  POE_motor.m  SE3_AdT.m  SE3_adxi.m  SE3_exp.m  SE3_inv.m  SE3_log.m  SO3_exp.m  SO3_log.m
benchmark/assets/: .MATLABDriveTag
benchmark/assets/abb/: .MATLABDriveTag  GA_abb.m  abb.urdf
benchmark/assets/abb/meshes/: .MATLABDriveTag
benchmark/assets/abb/meshes/collision/: .MATLABDriveTag
benchmark/assets/abb/meshes/visual/: .MATLABDriveTag
benchmark/assets/chin/: .MATLABDriveTag  GA_chin.m  POE_chin.m  chin.urdf
benchmark/assets/chin/meshes/: .MATLABDriveTag
benchmark/assets/jaka/: .MATLABDriveTag  GA_jaka.m  POE_jaka.m  jaka.urdf
benchmark/assets/jaka/meshes/: .MATLABDriveTag
benchmark/assets/panda/: .MATLABDriveTag  GA_panda.m  POE_panda.m  SVA_panda.m
benchmark/assets/panda/meshes/: .MATLABDriveTag
benchmark/assets/panda/meshes/collision/: .MATLABDriveTag
benchmark/assets/panda/meshes/visual/: .MATLABDriveTag
benchmark/model/: GA_chin.m  GA_jaka.m  GA_panda.m  POE_panda.m  SVA_panda.m
description/meshes/abb_4600/collision/: .MATLABDriveTag
description/meshes/abb_4600/visual/: .MATLABDriveTag
description/urdf/: abb_4600.urdf  chin_crb7.urdf  franka_panda.urdf  jaka_zu12.urdf
include/GA/: GA_algebra.hpp  GA_robot.hpp  algebra.h  robotics.h
include/OC/: boxqp.h  boxqp.hpp  ilqg.h  ilqr.hpp  linear.hpp  model.hpp  robot.hpp
include/Utils/: cubic_spline.hpp
matlab/: GA_AdM.m  GA_Rev.m  GA_adB.m  GA_dual.m  GA_exp.m  GA_fdyn.m  GA_fdyn_fo.m  GA_fdyn_so.m  GA_fkine.m  GA_idyn.m  GA_idyn_fo.m  GA_idyn_so.m  GA_ikine.m  GA_jacob_A.m  GA_jacob_G.m  GA_motor.m  GA_plotM.m  GA_prodM.m  GA_prodMB.m  PGA_Lie2.m  PGA_Lie3.m  PGA_jacob3.m
src/: GA_algebra.cpp  GA_robot.cpp  boxqp.cpp  ilqr.cpp
src/GA/: algebra.cpp  robotics.cpp
src/OC/: boxqp.cpp  ilqg.cpp
test/: GA_test.cpp  iLQG_linear_test.cpp  iLQG_robot_dyn_test.cpp  iLQG_robot_kine_test.cpp  iLQG_robot_test.cpp  sim_dyn_test.cpp  sim_kine_test.cpp
tests/: GA_algebra_test.cpp  GA_robot_test.cpp  iLQR_boxqp_test.cpp  iLQR_linear_test.cpp  iLQR_robot_test.cpp  robot_mpc_test.cpp
