<?xml version="1.0"?>
<package format="3">
  <name>ga-ddp</name>
  <version>0.0.1</version>
  <description>A differential dynamic programming algorithm based on geometric algebra, considering the complete dynamics of robots</description>
  <maintainer email="Chen.WH@sjtu.edu.cn">ChenWH</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>Eigen3</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>Eigen3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>